
Package: R.cache
===============

Version: 0.4.1 [2011-04-01]
o Added trial version of evalWithMemoization().


Version: 0.4.0 [2011-02-14]
o Added trial versions of memoizedCall() and addMemoization().


Version: 0.3.0 [2010-03-13]
o Added a NAMESPACE.


Version: 0.2.0 [2009-10-16]
o BUG FIX: In R v2.10.0 and newer, we would get an error reporting that
  internal function loadFromConn() does not exists.


Version: 0.1.9 [2009-09-11]
o Added argument 'onError' to loadCache(), to specify the action when 
  an error occurs.  The default used to be to print the error message
  (onError="print"), but now the default is to generate a warning
  ("warning").  The other alternatives are do silently ignore it, or
  to throw the error ("error").  Except for onError="error", loadCache()
  always returns NULL if an error occurs.


Version: 0.1.8 [2009-08-11]
o ROBUSTNESS: Added sanity check to readCacheHeader() testing 
  that the read header identifier is non-empty.  This results
  in a clearer error message that before.
o Now readCacheHeader() reports the "pathname" in error/warnings
  messages, if argument 'file' refers to a file and the 
  "description" if it refers to a connection.
o CLEAN UP: Renamed the HISTORY file to NEWS.


Version: 0.1.7 [2008-02-27]
o Added option to updated the "last-modified" timestamp of cache 
  files whenever they are loaded via loadCache(). This will help
  identified what cache files have not been used for a long time.
  To turn this on, use options("R.cache::touchOnLoad"=TRUE).
o Now error messages specifies the pathname, if available.
o BUG FIX: The throw() for invalid identifiers was trying to put 
  the connection object in the output and not the identifier.


Version: 0.1.6 [2007-07-02]
o Now environments, in addition to lists, may be used as keys
  for generating cache names.
o Package passes R CMD check on R v2.6.0 devel.  Minor mods.


Version: 0.1.5 [2007-03-11]
o Added getCacheRootPath() to the help index page.